refactor: URL/URLConnection을 HttpClient로 대체
- Java 20에서 deprecated된 URL/URLConnection 대신 HttpClient 사용
- 더 현대적이고 안전한 HTTP 클라이언트로 교체
- 바이너리 파일 시그니처 기반 MIME 타입 감지 로직 추가
- HTTP 상태 코드 검증 및 에러 처리 개선
- HEAD 요청을 통한 효율적인 Content-Type 헤더 확인
- 더 많은 이미지 형식 지원 (TIFF, ICO 추가)
- InterruptedException 적절한 처리