@@ -3,60 +3,106 @@ package spring.memewikibe.common.util;
 import org.springframework.util.StringUtils;
 
 import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
-import java.net.URLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
 
 public class ImageUtils {
+
+    private static final HttpClient HTTP_CLIENT = HttpClient.newBuilder()
+        .connectTimeout(Duration.ofSeconds(10))
+        .build();
 
     public static byte[] downloadBytes(String url) throws IOException {
         if (!StringUtils.hasText(url)) {
             throw new IllegalArgumentException("URL cannot be null or empty");
         }
         
-        URL u = new URL(url);
-        URLConnection conn = u.openConnection();
-        conn.setConnectTimeout(10000); // 10초 연결 타임아웃
-        conn.setReadTimeout(30000);    // 30초 읽기 타임아웃
-        
-        try (InputStream in = conn.getInputStream();
-             ByteArrayOutputStream out = new ByteArrayOutputStream()) {
-            byte[] buf = new byte[8192];
-            int n;
-            while ((n = in.read(buf)) != -1) {
-                out.write(buf, 0, n);
+        try {
+            URI uri = new URI(url);
+            HttpRequest request = HttpRequest.newBuilder()
+                .uri(uri)
+                .timeout(Duration.ofSeconds(30))
+                .GET()
+                .build();
+            
+            HttpResponse<byte[]> response = HTTP_CLIENT.send(request, HttpResponse.BodyHandlers.ofByteArray());
+            
+            if (response.statusCode() >= 200 && response.statusCode() < 300) {
+                return response.body();
+            } else {
+                throw new IOException("HTTP error " + response.statusCode() + " when downloading: " + url);
             }
-            return out.toByteArray();
+        } catch (URISyntaxException e) {
+            throw new IllegalArgumentException("Invalid URL: " + url, e);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new IOException("Download interrupted", e);
         }
     }
 
     public static String detectMimeType(String imageUrl, byte[] data) throws IOException {
-        // Try by URL connection header
+        // Try by HTTP response header
         try {
-            URL u = new URL(imageUrl);
-            URLConnection conn = u.openConnection();
-            conn.setConnectTimeout(5000); // 5초 타임아웃
-            String ct = conn.getContentType();
-            if (StringUtils.hasText(ct)) return ct;
+            URI uri = new URI(imageUrl);
+            HttpRequest request = HttpRequest.newBuilder()
+                .uri(uri)
+                .timeout(Duration.ofSeconds(5))
+                .method("HEAD", HttpRequest.BodyPublishers.noBody())
+                .build();
+            
+            HttpResponse<Void> response = HTTP_CLIENT.send(request, HttpResponse.BodyHandlers.discarding());
+            String contentType = response.headers().firstValue("Content-Type").orElse(null);
+            if (StringUtils.hasText(contentType)) {
+                // Content-Type might include charset, so extract only the MIME type
+                return contentType.split(";")[0].trim();
+            }
         } catch (Exception ignored) {
+            // If HEAD request fails, continue with other methods
         }
-        // Try by stream content sniffing
-        try (InputStream is = new ByteArrayInputStream(data)) {
-            String guessed = URLConnection.guessContentTypeFromStream(is);
-            if (StringUtils.hasText(guessed)) return guessed;
-        }
+        
+        // Try by stream content sniffing using legacy method (still works for content detection)
+        String guessed = guessContentTypeFromBytes(data);
+        if (StringUtils.hasText(guessed)) return guessed;
+        
         // Fallback by extension
         return getMimeTypeByExtension(imageUrl);
     }
 
     public static String sniffMimeType(byte[] data, String filename) throws IOException {
-        try (InputStream is = new ByteArrayInputStream(data)) {
-            String guessed = URLConnection.guessContentTypeFromStream(is);
-            if (StringUtils.hasText(guessed)) return guessed;
-        }
+        String guessed = guessContentTypeFromBytes(data);
+        if (StringUtils.hasText(guessed)) return guessed;
         return getMimeTypeByExtension(filename);
+    }
+    
+    private static String guessContentTypeFromBytes(byte[] data) {
+        if (data == null || data.length < 8) {
+            return null;
+        }
+        
+        // Check common image file signatures
+        if (data.length >= 8 && data[0] == (byte) 0x89 && data[1] == 0x50 && data[2] == 0x4E && data[3] == 0x47) {
+            return "image/png";
+        }
+        if (data.length >= 3 && data[0] == (byte) 0xFF && data[1] == (byte) 0xD8 && data[2] == (byte) 0xFF) {
+            return "image/jpeg";
+        }
+        if (data.length >= 6 && data[0] == 0x47 && data[1] == 0x49 && data[2] == 0x46 && data[3] == 0x38) {
+            return "image/gif";
+        }
+        if (data.length >= 12 && data[8] == 0x57 && data[9] == 0x45 && data[10] == 0x42 && data[11] == 0x50) {
+            return "image/webp";
+        }
+        if (data.length >= 2 && data[0] == 0x42 && data[1] == 0x4D) {
+            return "image/bmp";
+        }
+        
+        return null;
     }
     
     private static String getMimeTypeByExtension(String filename) {
@@ -71,6 +117,8 @@ public class ImageUtils {
         if (lower.endsWith(".webp")) return "image/webp";
         if (lower.endsWith(".bmp")) return "image/bmp";
         if (lower.endsWith(".svg")) return "image/svg+xml";
+        if (lower.endsWith(".tiff") || lower.endsWith(".tif")) return "image/tiff";
+        if (lower.endsWith(".ico")) return "image/x-icon";
         return "application/octet-stream";
     }
 }
